--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,13 +1,46 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-  version="3.1"
-  metadata-complete="true">
+    version="3.1"
+    metadata-complete="true">
 
-  <display-name>LilleWebMarket</display-name>
-  <description>
-    Bourse d'informations
-  </description>
+    <display-name>LilleWebMarket</display-name>
+    <description>
+        Bourse d'informations
+    </description>
+
+
+
+    <servlet>
+        <servlet-name>LoginController</servlet-name>
+        <servlet-class>src.controller.LoginController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>LoginController</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+
+
+    <security-constraint>
+        <web-ressource-collection>
+            <web-ressource-name>test</web-ressource-name>
+            <url-pattern>/</url-pattern>
+        </web-ressource-collection>
+        <auth-constraint>
+            <role-name>user</role-name>
+        </auth-constraint>
+    </security-constraint>
+
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <realm-name>lwm-auth</realm-name>
+        <form-login-config>
+            <form-login-page>/login</form-login-page>
+            <form-error-page>/login?error</form-error-page>
+        </form-login-config>
+    </login-config>
 </web-app>
