--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -26,10 +26,10 @@
 
 
     <security-constraint>
-        <web-ressource-collection>
-            <web-ressource-name>test</web-ressource-name>
-            <url-pattern>/</url-pattern>
-        </web-ressource-collection>
+        <web-resource-collection>
+            <web-resource-name>test</web-resource-name>
+            <url-pattern>/test</url-pattern>
+        </web-resource-collection>
         <auth-constraint>
             <role-name>user</role-name>
         </auth-constraint>
