--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -18,9 +18,21 @@
         <servlet-class>src.controller.LoginController</servlet-class>
     </servlet>
 
+    <servlet>
+        <servlet-name>TestController</servlet-name>
+        <servlet-class>src.controller.TestController</servlet-class>
+    </servlet>
+
+
+
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>TestController</servlet-name>
+        <url-pattern>/testons</url-pattern>
     </servlet-mapping>
 
 
@@ -37,7 +49,7 @@
 
     <login-config>
         <auth-method>FORM</auth-method>
-        <realm-name>lwm-auth</realm-name>
+        <realm-name>realm-database</realm-name>
         <form-login-config>
             <form-login-page>/login</form-login-page>
             <form-error-page>/login?error</form-error-page>
