--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -32,10 +32,22 @@
 
     <servlet-mapping>
         <servlet-name>TestController</servlet-name>
+        <url-pattern>/testons/</url-pattern>
         <url-pattern>/testons</url-pattern>
+
+        <url-pattern>/testons/toto</url-pattern>
     </servlet-mapping>
 
 
+
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <realm-name>realm-database</realm-name>
+        <form-login-config>
+            <form-login-page>/login</form-login-page>
+            <form-error-page>/login?error</form-error-page>
+        </form-login-config>
+    </login-config>
 
     <security-constraint>
         <web-resource-collection>
@@ -46,13 +58,4 @@
             <role-name>user</role-name>
         </auth-constraint>
     </security-constraint>
-
-    <login-config>
-        <auth-method>FORM</auth-method>
-        <realm-name>realm-database</realm-name>
-        <form-login-config>
-            <form-login-page>/login</form-login-page>
-            <form-error-page>/login?error</form-error-page>
-        </form-login-config>
-    </login-config>
 </web-app>
