--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -12,10 +12,14 @@
     </description>
 
 
+    <servlet>
+        <servlet-name>HomeController</servlet-name>
+        <servlet-class>src.controller.HomeController</servlet-class>
+    </servlet>
 
     <servlet>
-        <servlet-name>LoginController</servlet-name>
-        <servlet-class>src.controller.LoginController</servlet-class>
+        <servlet-name>SecurityController</servlet-name>
+        <servlet-class>src.controller.SecurityController</servlet-class>
     </servlet>
 
     <servlet>
@@ -26,17 +30,28 @@
 
 
     <servlet-mapping>
-        <servlet-name>LoginController</servlet-name>
+        <servlet-name>HomeController</servlet-name>
+        <url-pattern>/home</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>SecurityController</servlet-name>
         <url-pattern>/login</url-pattern>
+        <url-pattern>/login/logout</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>TestController</servlet-name>
-        <url-pattern>/testons/</url-pattern>
         <url-pattern>/testons</url-pattern>
 
         <url-pattern>/testons/toto</url-pattern>
     </servlet-mapping>
+
+
+
+    <welcome-file-list>
+        <welcome-file>home</welcome-file>
+    </welcome-file-list>
 
 
 
