--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -23,8 +23,8 @@
     </servlet>
 
     <servlet>
-        <servlet-name>TestController</servlet-name>
-        <servlet-class>src.controller.TestController</servlet-class>
+        <servlet-name>MarketController</servlet-name>
+        <servlet-class>src.controller.MarketController</servlet-class>
     </servlet>
 
 
@@ -37,14 +37,17 @@
     <servlet-mapping>
         <servlet-name>SecurityController</servlet-name>
         <url-pattern>/login</url-pattern>
-        <url-pattern>/login/logout</url-pattern>
+        <url-pattern>/security/login</url-pattern>
+        <url-pattern>/security/logout</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
-        <servlet-name>TestController</servlet-name>
-        <url-pattern>/testons</url-pattern>
-
-        <url-pattern>/testons/toto</url-pattern>
+        <servlet-name>MarketController</servlet-name>
+        <url-pattern>/markets</url-pattern>
+        <url-pattern>/market/create</url-pattern>
+        <url-pattern>/market/show</url-pattern>
+        <url-pattern>/market/update</url-pattern>
+        <url-pattern>/market/delete</url-pattern>
     </servlet-mapping>
 
 
@@ -66,9 +69,10 @@
 
     <security-constraint>
         <web-resource-collection>
-            <web-resource-name>test</web-resource-name>
-            <url-pattern>/test</url-pattern>
+            <web-resource-name>login</web-resource-name>
+            <url-pattern>/security/login</url-pattern>
         </web-resource-collection>
+
         <auth-constraint>
             <role-name>user</role-name>
         </auth-constraint>
