Tout encodé en UTF-8 + réponses en UTF-8

--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -12,6 +12,26 @@
     </description>
 
 
+
+    <filter>
+        <filter-name>Set Character Encoding</filter-name>
+        <filter-class>org.apache.catalina.filters.SetCharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>ignore</param-name>
+            <param-value>false</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>Set Character Encoding</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
+
     <servlet>
         <servlet-name>HomeController</servlet-name>
         <servlet-class>src.controller.HomeController</servlet-class>
