--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -41,6 +41,10 @@
            <taglib-uri>form</taglib-uri>
            <taglib-location>/WEB-INF/tags/form.tld</taglib-location>
         </taglib>
+        <taglib>
+           <taglib-uri>maths</taglib-uri>
+           <taglib-location>/WEB-INF/tags/maths.tld</taglib-location>
+        </taglib>
     </jsp-config>
 
 
@@ -118,6 +122,7 @@
 
         <auth-constraint>
             <role-name>user</role-name>
+            <role-name>admin</role-name>
         </auth-constraint>
     </security-constraint>
 </web-app>
