--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -87,7 +87,8 @@
         <url-pattern>/market/create</url-pattern>
         <url-pattern>/market/buy</url-pattern>
         <url-pattern>/market/sell</url-pattern>
-        <url-pattern>/market/my</url-pattern>
+        <url-pattern>/market/mymarkets</url-pattern>
+        <url-pattern>/market/mystocks</url-pattern>
         <url-pattern>/market/end</url-pattern>
     </servlet-mapping>
 
@@ -113,17 +114,39 @@
             <web-resource-name>login</web-resource-name>
             <url-pattern>/security/login</url-pattern>
         </web-resource-collection>
+
+        <auth-constraint>
+            <role-name>user</role-name>
+            <role-name>maker</role-name>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
+
+    <security-constraint>
         <web-resource-collection>
             <web-resource-name>market</web-resource-name>
-            <url-pattern>/market/create</url-pattern>
             <url-pattern>/market/buy</url-pattern>
             <url-pattern>/market/sell</url-pattern>
-            <url-pattern>/market/my</url-pattern>
-            <url-pattern>/market/end</url-pattern>
+            <url-pattern>/market/mystocks</url-pattern>
         </web-resource-collection>
 
         <auth-constraint>
             <role-name>user</role-name>
+            <role-name>maker</role-name>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
+
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>market</web-resource-name>
+            <url-pattern>/market/mymarkets</url-pattern>
+            <url-pattern>/market/create</url-pattern>
+            <url-pattern>/market/end</url-pattern>
+        </web-resource-collection>
+
+        <auth-constraint>
+            <role-name>maker</role-name>
             <role-name>admin</role-name>
         </auth-constraint>
     </security-constraint>
